# gemma_flutter_tflite

./: .metadata  README.md  ffigen.yaml  pubspec.yaml
example/: README.md  pubspec.yaml
example/lib/: main.dart
example/macos/Runner.xcodeproj/: project.pbxproj
example/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
example/macos/Runner/Configs/: AppInfo.xcconfig
lib/: ffigen_app.dart  ffigen_app_bindings_generated.dart
macos/: ffigen_app.podspec
macos/Classes/: ffigen_app.c
src/: CMakeLists.txt  ffigen_app.c  ffigen_app.h
